# central-library

./: .gitignore  main.py  pyproject.toml
backend/: .gitignore  main.py  pytest.ini
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: __init__.py  analytics.py  auth.py  authors.py  book_copies.py  books.py  genres.py  halls.py  roles.py  transactions.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  author.py  book.py  book_author.py  book_copy.py  book_rating.py  genre.py  hall.py  role.py  transaction.py  user.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  author.py  book.py  book_copy.py  book_rating.py  genre.py  hall.py  role.py  transaction.py  user.py
backend/tests/: conftest.py  test_auth.py  test_core_flow.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: analytics.js  auth.js  authors.js  books.js  client.js  genres.js  halls.js  roles.js  transactions.js  users.js
frontend/src/components/: BookCard.jsx  HallCard.jsx  Pagination.jsx  Sidebar.jsx  StatCard.jsx  TopBar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AuthPage.jsx  BooksManagementPage.jsx  CatalogPage.jsx  HallsPage.jsx  PlaceholderPage.jsx  ProfilePage.jsx  UsersManagementPage.jsx
frontend/src/routes/: ProtectedRoute.jsx
frontend/src/styles/: main.css
frontend/src/utils/: auth.js  date.js
